fix alt on image

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
     <div class="card">
 
-      <img class="illustration" src="assets/images/illustration-article.svg">
+      <img class="illustration" src="assets/images/illustration-article.svg" alt="Illustration of a blog post">
 
       <div class="tag">Learning</div>
 
@@ -102,7 +102,7 @@
       </div>
 
       <div class="writer">
-        <img class="avatar" src="assets/images/image-avatar.webp">
+        <img class="avatar" src="assets/images/image-avatar.webp" alt="Avatar of Greg Hooper">
         <p class="name">Greg Hooper</p>
       </div>
 
