--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     }
 
     .card {
-      width: 300px;
+      width: 375px;
       background-color: #fff;
       border-radius: 10px;
       box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -55,8 +55,15 @@
     }
 
     .article-title {
-      font-size: 18px;
       margin-top: 20px;
+      font-size: 20px;
+    }
+    .article-title a {
+      text-decoration: none;
+      color: black;
+    }
+    .article-title a:hover {
+      color: hsl(47, 88%, 63%);
     }
 
     .description {
@@ -82,6 +89,7 @@
       display: block;
       height: 100%;
       font-weight: 800;
+      font-size: 14px;
     }
   </style>
 </head>
@@ -97,7 +105,7 @@
       <div class="published-date">Published 21 Dec 2023</div>
 
       <div>
-        <h1 class="article-title">HTML & CSS foundations</h1>
+        <h1 class="article-title"><a href="#">HTML & CSS foundations</a></h1>
         <p class="description">These languages are the backbone of every website, defining structure, content, and presentation.</p>
       </div>
 
