--- a/index.html
+++ b/index.html
@@ -36,6 +36,12 @@
       box-shadow: 10px 10px;
     }
 
+    @media only screen and (max-width: 375px) {
+      .card {
+        width: 300px;
+      }
+    }
+
     .illustration {
       width: 100%;
       border-radius: 10px;
